apps/formapi/overlays/production/formapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formapi
spec:
  rules:
    - host: forms.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: form-api
                port:
                  number: 3001
            path: /form-api
            pathType: Prefix
  tls:
    - hosts:
        - forms.contextsuite.com
      secretName: star-contextsuite-com
